# toy-nodejs

./: CMakeLists.txt  Makefile  README.md  build.sh  myNode.cc  toy-node.js
include/common/: loopStruct.hpp  macroDefinition.h  macroDefinition.hpp
include/utils/: file.h
include/v8/: v8-local-handle.h
lib/boost/: libboost_thread.so.1.81.0
lib/boost/cmake/boost_headers-1.81.0/: boost_headers-config.cmake
lib/boost/cmake/boost_thread-1.81.0/: boost_thread-config.cmake  libboost_thread-variant-shared.cmake  libboost_thread-variant-static.cmake
lib/libev/: libev.so.4
lib/mac/libev/: libev.4.dylib
libs/: console.js
libs/commonjs/: require.js
libs/internal/: validate.js
libs/path/: path.js
libs/timsUtils/: interval.js
src/core/: buffer.cc  commonjs.cc  console.cc  eventEmitter.cc  fs.cc  init.cc  process.cc  tcp-sample.cc  tcp.cc  tcp.out  timeUtils.cc
src/core/include/: buffer.hpp  commonjs.h  commonjs.hpp  console.h  eventEmitter.hpp  events-base.hpp  init.h  init.hpp  process.h  process.hpp  timeUtils.h  timeUtils.hpp
src/utils/: file.cc  set.cc  threadPool.cc  threadPool.hpp  utils.h  utils.hpp
test/: sample.js
test/commonjs/: index.js  module1.js  module2.js
test/sample/: sample.js
